Bug 794337 - Properly alias canvas image data when using Quartz compositing. r=jrmuizel

--HG--
extra : rebase_source : fb4c0e1a9bac0ac1cf54ddc23c66756060bbfdab